NodeJS Weather App

--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="astroName" style="
-    background: blue;
+    <div class="astroNameL" style="
     width: 350px;
     height: 150px;
     background: wheat;
     border: 3px solid rebeccapurple;
-    color: black
-">
+    color: rgba(0, 0, 0, 1);
+    font-size: 1.2rem;
+    font-weight: 600;
+    flex-direction: column-reverse;
+    display: flex;
+    box-sizing: border-box;
+    text-align: center;
+    justify-content: center;
+    background-repeat:round;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRq55gLgACGAtoTQc-3hAg5HKx1J9tIv9b1CQ&usqp=CAU);">
+    <div class="astroImgL">
+        
+    </div>
 
     </div>
-    <button class="btnL">Get London Weather Info</button>
-    <button class="btnA">Get Ankara Weather Info</button>
+    <button class="btnL" style="margin-bottom: 50px; margin-top: 5px;">
+    Get London Weather Info
+    </button>
+
+    <div class="astroNameA" style="
+    width: 350px;
+    height: 150px;
+    background: wheat;
+    border: 3px solid rebeccapurple;
+    color: rgb(0, 0, 0);
+    font-size: 1.2rem;
+    font-weight: 600;
+    flex-direction: column-reverse;
+    display: flex;
+    box-sizing: border-box;
+    text-align: center;
+    justify-content: center;
+    background-repeat: round;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtqgDyotOsIQed5HDDnbaTDqQbshDyUcN83Q&usqp=CAU);">
+    <div class="astroImgA">
+
+    </div>
+</div>
+<button class="btnA" style="margin-top: 5px;">Get Ankara Weather Info</button>
+
+
+
 
     <script src="app.js">
     </script>
